[design] [bug] fix hr alignment and improve display night mode

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -14,7 +14,7 @@ body {
   line-height: $line-height-160;
   transition: background-color $transition-ease-medium;
   &.is-night-mode {
-    background-color: $gray-03;
+    background-color: $gray-02;
     color: $white;
   }
 }
