--- a/src/sass/modules/_display.scss
+++ b/src/sass/modules/_display.scss
@@ -27,7 +27,7 @@
     line-height: 2em;
     text-align: center;
     border-radius: 50%;
-    color: $gray-16;
+    color: $gray-05;
     font-size: $font-size-200;
     display: block;
     transform: translate(-50%, -50%);
@@ -121,9 +121,9 @@
   .m-display-section-divider {
     background-color: $gray-05;
     .m-display-section-icon {
-      background-color: $gray-03;
+      background-color: $gray-02;
       border-color: $gray-05;
-      color: $gray-10;
+      color: $gray-18;
     }
   }
   .m-display-item,
